--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,15 @@ environment:
   sdk: '>=3.4.1 <4.0.0'
 
 dependencies:
+  on_audio_query: ^2.9.0
+  permission_handler: ^11.1.0
   flutter:
     sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
