--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.4.1 <4.0.0'
 
 dependencies:
+  audioplayers: ^6.1.0
   on_audio_query: ^2.9.0
   permission_handler: ^11.1.0
   flutter:
