--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.0'
+        classpath 'com.android.tools.build:gradle:8.6.1'
     }
 }
 
@@ -12,6 +12,17 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+    }
+    subprojects{
+        afterEvaluate {
+            if(project.hasProperty("android")) {
+                project.android {
+                    if(namespace == null) {
+                        namespace project.group
+                    }
+                }
+            }
+        }
     }
 }
 
